--- a/views/warehouse_management_views.xml
+++ b/views/warehouse_management_views.xml
@@ -48,11 +48,11 @@
             <field name="domain">[]</field>
             <field name="context">{}</field>
         </record>
-        <record model="ir.actions.act_window.view" id="act_open_vnitpro_base_currency_view_form">
-            <field name="act_window_id" ref="act_open_vnitpro_base_currency_view"/>
+        <record model="ir.actions.act_window.view" id="act_open_groupsupplies_view_form">
+            <field name="act_window_id" ref="act_open_groupsupplies_view"/>
             <field name="sequence" eval="20"/>
             <field name="view_mode">form</field>
-            <field name="view_id" ref="view_vnitpro_base_currency_form"/>
+            <field name="view_id" ref="view_groupsupplies_form"/>
         </record>
         <record model="ir.actions.act_window.view" id="act_open_vnitpro_base_currency_view_tree">
             <field name="act_window_id" ref="act_open_vnitpro_base_currency_view"/>
