--- a/views/groupsupplies_views.xml
+++ b/views/groupsupplies_views.xml
@@ -40,7 +40,7 @@
             </field>
         </record>
         <record model="ir.actions.act_window" id="act_open_groupsupplies_view">
-            <field name="name">groupsupplies</field>
+            <field name="name">group_supplies</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">groupsupplies</field>
             <field name="view_type">form</field>
