--- a/views/groupsupplies_views.xml
+++ b/views/groupsupplies_views.xml
@@ -4,25 +4,27 @@
         <record id="view_groupsupplies_tree" model="ir.ui.view">
             <field name="name">groupsupplies.tree</field>
             <field name="model">groupsupplies</field>
-            <field name="priority" eval="1"/>
+            <field name="priority" eval="8"/>
             <field name="arch" type="xml">
                 <tree>
                     <field name="code"/>
                     <field name="name"/>
+                    <field name="compute_name"/>
                 </tree>
             </field>
         </record>
         <record id="view_groupsupplies_form" model="ir.ui.view">
             <field name="name">groupsupplies.form</field>
             <field name="model">groupsupplies</field>
-            <field name="priority" eval="4"/>
+            <field name="priority" eval="8"/>
             <field name="arch" type="xml">
                 <form>
 
                     <sheet>
-                        <group col = "4" name="main">
-                            <field name="code" colspan="2"/>
-                            <field name="name" colspan="2"/>
+                        <group col = "8" name="main">
+                            <field name="code"/>
+                            <field name="name" />
+                            <field name="compute_name"/>
                         </group>
                     </sheet>
                 </form>
@@ -31,11 +33,12 @@
         <record id="view_groupsupplies_search" model="ir.ui.view">
             <field name="name">groupsupplies.search</field>
             <field name="model">groupsupplies</field>
-            <field name="priority" eval="4"/>
+            <field name="priority" eval="8"/>
             <field name="arch" type="xml">
                 <search>
                     <field name="code"/>
                     <field name="name"/>
+                    <field name="compute_name"/>
                 </search>
             </field>
         </record>
