--- a/views/xuatvt_views.xml
+++ b/views/xuatvt_views.xml
@@ -28,6 +28,15 @@
                             <field name="warehouse_id"/>
                             <field name="compute_name"/>
                         </group>
+                        <group>
+                            <field name="details_ids">
+                                <tree editable="bottom">
+                                    <field name="supplies_id"/>
+                                    <field name="groupsupplies_id"/>
+                                    <field name="quantity_id"/>
+                                </tree>
+                            </field>
+                        </group>
                     </sheet>
                 </form>
             </field>
@@ -38,20 +47,22 @@
             <field name="priority" eval="8"/>
             <field name="arch" type="xml">
                 <search>
-                            <field name="code"/>
-                            <field name="name"/>
-                            <field name="warehouse_id"/>
-                            <field name="compute_name"/>
+                    <field name="code"/>
+                    <field name="name"/>
+                    <field name="warehouse_id"/>
+                    <field name="compute_name"/>
                 </search>
             </field>
         </record>
         <record model="ir.actions.act_window" id="act_open_xuatvt_view">
-            <field name="name">xuatvt</field>
+            <field name="name">Exportingsupplies</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">xuatvt</field>
             <field name="view_type">form</field>
             <field name="view_mode">tree,form</field>
             <field name="search_view_id" ref="view_xuatvt_search"/>
+            <field name="domain">[]</field>
+            <field name="context">{}</field>
         </record>
     </data>
 </odoo>
