--- a/configure/views/supplies_views.xml
+++ b/configure/views/supplies_views.xml
@@ -2,21 +2,22 @@
 <odoo>
     <data>
         <record id="view_supplies_tree" model="ir.ui.view">
-            <field name="name">supplies.tree</field>
-            <field name="model">supplies</field>
-            <field name="priority" eval="8"/>
+            <field name="name">vnitpro.supplies.tree</field>
+            <field name="model">vnitpro.supplies</field>
+            <field name="priority" eval="1"/>
             <field name="arch" type="xml">
                 <tree>
                     <field name="code"/>
                     <field name="name"/>
+                    <field name="group_supplies"/>
                     <field name="compute_name"/>
                 </tree>
             </field>
         </record>
         <record id="view_supplies_form" model="ir.ui.view">
-            <field name="name">supplies.form</field>
-            <field name="model">supplies</field>
-            <field name="priority" eval="8"/>
+            <field name="name">vnitpro.supplies.form</field>
+            <field name="model">vnitpro.supplies</field>
+            <field name="priority" eval="4"/>
             <field name="arch" type="xml">
                 <form>
                     <sheet>
@@ -24,27 +25,29 @@
                             <field name="code"/>
                             <field name="name"/>
                             <field name="compute_name"/>
+                            <field name="group_supplies"/>
                         </group>
                     </sheet>
                 </form>
             </field>
         </record>
         <record id="view_supplies_search" model="ir.ui.view">
-            <field name="name">supplies.search</field>
-            <field name="model">supplies</field>
-            <field name="priority" eval="8"/>
+            <field name="name">vnitpro.supplies.search</field>
+            <field name="model">vnitpro.supplies</field>
+            <field name="priority" eval="4"/>
             <field name="arch" type="xml">
                 <search>
                     <field name="code"/>
+                    <field name="group_supplies"/>
                     <field name="name"/>
                     <field name="compute_name"/>
                 </search>
             </field>
         </record>
         <record model="ir.actions.act_window" id="act_open_supplies_view">
-            <field name="name">supplies</field>
+            <field name="name">Supplies</field>
             <field name="type">ir.actions.act_window</field>
-            <field name="res_model">supplies</field>
+            <field name="res_model">vnitpro.supplies</field>
             <field name="view_type">form</field>
             <field name="view_mode">tree,form</field>
             <field name="search_view_id" ref="view_supplies_search"/>
